# intent-classifier-pytorch

./: .env.example  .gitignore  GPU_ACCELERATION_ENABLED.md  QUICKSTART.md  README.md  generate_intent_mapping.py  predict.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
examples/: quick_start.py
results/: INTENT_MAPPING.md  classification_report.txt  intent_mapping.json  training_metadata.json
src/: __init__.py  config.py  dataset.py  evaluate.py  inference.py  model.py  trainer.py  utils.py
tests/: __init__.py  test_model.py
